organiza lista por ID primeiro e depois lote